Updated the Porfolio page to use a grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,14 +238,19 @@ textarea {
     margin-bottom: 30px;
 }
 
-.portfolio-image {
-    border-radius: 8px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-}
-
 .clearfix::after {
     content: "";
     display: block;
     clear: both;
+}
+
+.grid {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, 140px);
+    margin-bottom: 10px;
+}
+
+.grid>* {
+    border-radius: 8px;
 }
